--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mathjs": "^7.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.16.1",
     "vue-mathjax": "0.0.11",
     "vue-router": "^3.2.0"
   },
